Card overflow fix

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ p{
 .project-cards-container{
     background-color: rgba(11, 98, 220, 0.05);
     box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
+    overflow: hidden;
 }
 
 .project-title{
